// Vitest Snapshot v1

exports[`NounGlasses > renders the NounGlasses with background 1`] = `
<svg
  height="320"
  shape-rendering="crispEdges"
  viewBox="0 0 320 320"
  width="320"
  xmlns="http://www.w3.org/2000/svg"
>
  <rect
    fill="#d5d7e1"
    height="100%"
    width="100%"
  />
  <rect
    fill="#000000"
    height="10"
    width="60"
    x="100"
    y="110"
  />
  <rect
    fill="#000000"
    height="10"
    width="60"
    x="170"
    y="110"
  />
  <rect
    fill="#000000"
    height="10"
    width="30"
    x="100"
    y="120"
  />
  <rect
    fill="#ff0e0e"
    height="10"
    width="10"
    x="130"
    y="120"
  />
  <rect
    fill="#000000"
    height="10"
    width="20"
    x="140"
    y="120"
  />
  <rect
    fill="#000000"
    height="10"
    width="30"
    x="170"
    y="120"
  />
  <rect
    fill="#ff0e0e"
    height="10"
    width="10"
    x="200"
    y="120"
  />
  <rect
    fill="#000000"
    height="10"
    width="20"
    x="210"
    y="120"
  />
  <rect
    fill="#000000"
    height="10"
    width="160"
    x="70"
    y="130"
  />
  <rect
    fill="#000000"
    height="10"
    width="10"
    x="70"
    y="140"
  />
  <rect
    fill="#000000"
    height="10"
    width="10"
    x="100"
    y="140"
  />
  <rect
    fill="#0adc4d"
    height="10"
    width="10"
    x="110"
    y="140"
  />
  <rect
    fill="#000000"
    height="10"
    width="20"
    x="120"
    y="140"
  />
  <rect
    fill="#1929f4"
    height="10"
    width="10"
    x="140"
    y="140"
  />
  <rect
    fill="#000000"
    height="10"
    width="10"
    x="150"
    y="140"
  />
  <rect
    fill="#000000"
    height="10"
    width="10"
    x="170"
    y="140"
  />
  <rect
    fill="#0adc4d"
    height="10"
    width="10"
    x="180"
    y="140"
  />
  <rect
    fill="#000000"
    height="10"
    width="20"
    x="190"
    y="140"
  />
  <rect
    fill="#1929f4"
    height="10"
    width="10"
    x="210"
    y="140"
  />
  <rect
    fill="#000000"
    height="10"
    width="10"
    x="220"
    y="140"
  />
  <rect
    fill="#000000"
    height="10"
    width="10"
    x="70"
    y="150"
  />
  <rect
    fill="#000000"
    height="10"
    width="60"
    x="100"
    y="150"
  />
  <rect
    fill="#000000"
    height="10"
    width="60"
    x="170"
    y="150"
  />
  <rect
    fill="#000000"
    height="10"
    width="60"
    x="100"
    y="160"
  />
  <rect
    fill="#000000"
    height="10"
    width="60"
    x="170"
    y="160"
  />
</svg>
`;

exports[`NounGlasses > renders the NounGlasses without background 1`] = `
<svg
  height="320"
  shape-rendering="crispEdges"
  viewBox="0 0 320 320"
  width="320"
  xmlns="http://www.w3.org/2000/svg"
>
  <rect
    fill="#000000"
    height="10"
    width="60"
    x="100"
    y="110"
  />
  <rect
    fill="#000000"
    height="10"
    width="60"
    x="170"
    y="110"
  />
  <rect
    fill="#000000"
    height="10"
    width="30"
    x="100"
    y="120"
  />
  <rect
    fill="#ff0e0e"
    height="10"
    width="10"
    x="130"
    y="120"
  />
  <rect
    fill="#000000"
    height="10"
    width="20"
    x="140"
    y="120"
  />
  <rect
    fill="#000000"
    height="10"
    width="30"
    x="170"
    y="120"
  />
  <rect
    fill="#ff0e0e"
    height="10"
    width="10"
    x="200"
    y="120"
  />
  <rect
    fill="#000000"
    height="10"
    width="20"
    x="210"
    y="120"
  />
  <rect
    fill="#000000"
    height="10"
    width="160"
    x="70"
    y="130"
  />
  <rect
    fill="#000000"
    height="10"
    width="10"
    x="70"
    y="140"
  />
  <rect
    fill="#000000"
    height="10"
    width="10"
    x="100"
    y="140"
  />
  <rect
    fill="#0adc4d"
    height="10"
    width="10"
    x="110"
    y="140"
  />
  <rect
    fill="#000000"
    height="10"
    width="20"
    x="120"
    y="140"
  />
  <rect
    fill="#1929f4"
    height="10"
    width="10"
    x="140"
    y="140"
  />
  <rect
    fill="#000000"
    height="10"
    width="10"
    x="150"
    y="140"
  />
  <rect
    fill="#000000"
    height="10"
    width="10"
    x="170"
    y="140"
  />
  <rect
    fill="#0adc4d"
    height="10"
    width="10"
    x="180"
    y="140"
  />
  <rect
    fill="#000000"
    height="10"
    width="20"
    x="190"
    y="140"
  />
  <rect
    fill="#1929f4"
    height="10"
    width="10"
    x="210"
    y="140"
  />
  <rect
    fill="#000000"
    height="10"
    width="10"
    x="220"
    y="140"
  />
  <rect
    fill="#000000"
    height="10"
    width="10"
    x="70"
    y="150"
  />
  <rect
    fill="#000000"
    height="10"
    width="60"
    x="100"
    y="150"
  />
  <rect
    fill="#000000"
    height="10"
    width="60"
    x="170"
    y="150"
  />
  <rect
    fill="#000000"
    height="10"
    width="60"
    x="100"
    y="160"
  />
  <rect
    fill="#000000"
    height="10"
    width="60"
    x="170"
    y="160"
  />
</svg>
`;

exports[`NounGlasses > renders with NounGlasses with bounds fit 1`] = `
<svg
  height="60"
  shape-rendering="crispEdges"
  viewBox="70 110 160 60"
  width="160"
  xmlns="http://www.w3.org/2000/svg"
>
  <rect
    fill="#000000"
    height="10"
    width="60"
    x="100"
    y="110"
  />
  <rect
    fill="#000000"
    height="10"
    width="60"
    x="170"
    y="110"
  />
  <rect
    fill="#000000"
    height="10"
    width="30"
    x="100"
    y="120"
  />
  <rect
    fill="#ff0e0e"
    height="10"
    width="10"
    x="130"
    y="120"
  />
  <rect
    fill="#000000"
    height="10"
    width="20"
    x="140"
    y="120"
  />
  <rect
    fill="#000000"
    height="10"
    width="30"
    x="170"
    y="120"
  />
  <rect
    fill="#ff0e0e"
    height="10"
    width="10"
    x="200"
    y="120"
  />
  <rect
    fill="#000000"
    height="10"
    width="20"
    x="210"
    y="120"
  />
  <rect
    fill="#000000"
    height="10"
    width="160"
    x="70"
    y="130"
  />
  <rect
    fill="#000000"
    height="10"
    width="10"
    x="70"
    y="140"
  />
  <rect
    fill="#000000"
    height="10"
    width="10"
    x="100"
    y="140"
  />
  <rect
    fill="#0adc4d"
    height="10"
    width="10"
    x="110"
    y="140"
  />
  <rect
    fill="#000000"
    height="10"
    width="20"
    x="120"
    y="140"
  />
  <rect
    fill="#1929f4"
    height="10"
    width="10"
    x="140"
    y="140"
  />
  <rect
    fill="#000000"
    height="10"
    width="10"
    x="150"
    y="140"
  />
  <rect
    fill="#000000"
    height="10"
    width="10"
    x="170"
    y="140"
  />
  <rect
    fill="#0adc4d"
    height="10"
    width="10"
    x="180"
    y="140"
  />
  <rect
    fill="#000000"
    height="10"
    width="20"
    x="190"
    y="140"
  />
  <rect
    fill="#1929f4"
    height="10"
    width="10"
    x="210"
    y="140"
  />
  <rect
    fill="#000000"
    height="10"
    width="10"
    x="220"
    y="140"
  />
  <rect
    fill="#000000"
    height="10"
    width="10"
    x="70"
    y="150"
  />
  <rect
    fill="#000000"
    height="10"
    width="60"
    x="100"
    y="150"
  />
  <rect
    fill="#000000"
    height="10"
    width="60"
    x="170"
    y="150"
  />
  <rect
    fill="#000000"
    height="10"
    width="60"
    x="100"
    y="160"
  />
  <rect
    fill="#000000"
    height="10"
    width="60"
    x="170"
    y="160"
  />
</svg>
`;
